cadastro clientes finalizado | inicio consulta clientes

--- a/Fontes/SisLoja/SisLoja/SisLoja.csproj
+++ b/Fontes/SisLoja/SisLoja/SisLoja.csproj
@@ -9,9 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="BLL\" />
-    <Folder Include="DAL\" />
-    <Folder Include="Models\" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
