--- a/Fontes/SisLoja/SisLoja/SisLoja.csproj
+++ b/Fontes/SisLoja/SisLoja/SisLoja.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
+    <PackageReference Include="Krypton.Toolkit" Version="80.23.11.318" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="ZXing.Net" Version="0.16.6" />
